# state-space-neuro

./: .gitignore  .gitmodules  README.md  pyproject.toml
archive/: rslds_crossval_functional.py
archive/ds_dim_reduc/: ds_GPFA.py  ds_PCA.py
archive/elephant_lorenz/: elephant_util.py  lorenz_jpca.py
archive/lorenz/: pca_lorenz.py
archive/rslds_ds/: another_rslds_test.py  hammad_test.py  rslds_crossval.py
notes/: model_notes.txt
src/: data_loading_dendrite.py  data_loading_notes.txt  dndr_tester.py  fake_spikes.py  load_dendrite.py  load_dndr.py  load_dndr_1sess.py  notes.txt  rslds.py  spiking_load.py  test.py
src/archive/lorenz/: latent_attractor.py
src/archive/rslds_ds/: messy_rslds_ds.py
src/dendrite GCaMP8/: load_dendrite.py  load_dndr_1sess.py
src/dim_reduc/: GPFA.py
src/dual-shank/: ds_load.py
src/dual_shank/: clean_rslds_ds.py  cross_val_k.py  ds_GPFA.py  ds_PCA.py  ds_jPCA.py  ds_load_util.py  hammad_test.py  lfads_ds.py  messy_rslds_ds.py  new_cross.py  rslds_crossval.py  rslds_ds.py  single_neuron_contribution.py
src/elephant_lorenz/: lorenz_pca.py
src/elephant_tests/: tester_gpfa.py  tester_jpca.py
src/gcamp8/: gcamp8_crossval.py  gcamp8_load_util.py  gcamp8_rslds.py
src/l23/: extra.py  l23_load_util.py  l23_rslds.py
src/lfads/: prep_lorenz_data.py  run_pbt.py
src/lorenz/: gpfa_lorenz.py  latent_attractor.py  pca_lorenz.py  train_autoencoder_Lorenz.ipynb
src/old/lorenz/: gpfa_lorenz.py
src/rbp-cre/: rbp_load_util.py
src/rbp_cre/: rbp-cre_rslds.py  rbp_load_util.py
src/rslds/: 4-Recurrent-SLDS.ipynb  rSLDS.py  rslds_pipeline.py  rslds_util.py
utils/: rslds_util.py  utils.py
