[project]
name = "state-space-neuro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autograd>=1.8.0",
    "codecov>=2.1.13",
    "coverage>=7.14.1",
    "cython>=3.2.5",
    "dynamax>=1.0.1",
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
