[project]
name = "state-space-neuro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "autograd>=1.8.0",
    "codecov>=2.1.13",
    "coverage>=7.14.1",
    "cython>=3.2.5",
    "diffusers>=0.37.1",
    "dynamax>=1.0.1",
    "dysts>=0.95",
    "einops>=0.8.2",
    "elephant>=1.2.0",
    "flax>=0.10.7",
    "h5py>=3.14.0",
    "ipykernel>=7.2.0",
    "ipython>=8.39.0",
    "kneed>=0.8.6",
    "loguru>=0.7.3",
    "lovely-tensors>=0.1.22",
    "mat73>=0.65",
    "matplotlib>=3.10.9",
    "matplotlib-inline>=0.2.2",
    "ml-collections>=1.1.0",
    "myterial>=1.2.1",
    "networkx>=3.4.2",
    "numba>=0.65.1",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "openpyxl>=3.1.5",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "pygments>=2.20.0",
    "pyinspect>=0.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "quantities>=0.16.4",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "setuptools>=81.0.0",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "traitlets>=5.15.1",
    "typing>=3.10.0.0",
    "typing-extensions>=4.15.0",
    "vedo>=2026.6.1",
    "vtk>=9.6.2",
    "wandb>=0.27.0",
]
